kinda done not perfect but time is almost finished
