# models/swagger_models.go
@@ -1,6 +1,6 @@
 package models
 
-// Basic response: Good - OK. Else - Error
+// Ответ системы. В случае успеха - ОК. Иначе описание ошибки
 // swagger:response basicResponse
 type basicResponseWrapper struct {
 	// Response Message
@@ -8,50 +8,86 @@ type basicResponseWrapper struct {
 	Body BasicResponse
 }
 
-// swagger:parameters updateActor
+// swagger:parameters updateActor deleteActor
 type actorIDParameterWrapper struct {
-	// The id of actor
+	// ID актёра
 	// in: path
 	// required: true
-	ID int
+	ID int `json:"id"`
 }
 
 // An actor from database
 // swagger:response actor
 type actorResponseWrapper struct {
-	// Actor from database
+	// Данные об актёре
 	// in: body
 	Body Actor
 }
 
 // An actor from database
-// swagger:parameters updateActor deleteActor
+// swagger:parameters updateActor
 type actorParameterWrapper struct {
-	// Actor from database
+	// Данные об актёре
 	// in: body
 	Body Actor
+}
+
+// To add film in a system. Film and actors list
+// swagger:model filmWithActors
+type FilmWithActorsRequest struct {
+	FilmRequest
+	Actors []string `json:"actors"`
 }
 
 // Model for adding film into database
 // swagger:parameters addFilm
 type filmWithActorsWrapper struct {
-	//Film with actors
+	// Данные об фильме с актёрами
 	// in: body
 	Body FilmWithActorsRequest
+}
+
+// Model for adding actor into database
+// swagger:parameters addActor
+type actorRequestWrapper struct {
+	// Данные о актёре
+	// in: body
+	Body ActorRequest
 }
 
 // Model for adding film into database
 // swagger:parameters updateFilm
 type filmWrapper struct {
-	// Film
+	// Данные о фильме
 	// in: body
 	Body Film
 }
 
 // swagger:parameters updateFilm deleteFilm
 type filmIDParameterWrapper struct {
-	// The id of film
+	// ID фильма
 	// in: path
 	// required: true
 	ID int `json:"id"`
+}
+
+// swagger:parameters getFilms
+type filmSortByParameterWrapper struct {
+	// Параметр для сортировки. Возможные поля - rating, title, release_date
+	// in: query
+	SortBy string `json:"sort_by"`
+}
+
+// swagger:parameters getFilm
+type filmByTitleParameterWrapper struct {
+	// Поиск по фрагменту названия
+	// in: query
+	Title string `json:"title"`
+}
+
+// swagger:parameters getFilm
+type filmByActorNameParameterWrapper struct {
+	// Поиск по фрагменту имени актёра
+	// in: query
+	Actor string `json:"actor"`
 }
